[package]
name = "simple_lockstep_sim"
version = "0.1.0"
authors = ["BGluth <gluthb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4"
pretty_env_logger = "0.4"
ordered-float = "2.0"
rand = "0.8.2"
rand_distr = "0.4.0"